--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-parallax-tilt": "^1.7.298",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
